add markup header

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ a {
     color: #ffff;
     font-weight: 500;
     letter-spacing: 0.64px;
-    background-color: #404BBF;
+    background-color:  #4D5AE5;
     cursor: pointer;
 }
 
