--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,39 @@ ul, ol {
 a {
     text-decoration: none;
 }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+img {
+    display: block;
+}
 
+:root {
+    --primary-brand-color: #4d5ae5;
+}
+
+.conteiner {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header{
+     border-bottom: 1px solid #e7e9fc;
+}
+
+.conteiner_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_nav {
+    display: flex;
+    align-items: center;
+}
 
 
 .header_logo{
@@ -20,6 +52,8 @@ a {
     line-height: 1.17;
     text-transform: uppercase;
     color: #4d5ae5; 
+    margin-right: 76px;
+    
 }
 .logo_studio{
      color: #2E2F42;
@@ -33,11 +67,13 @@ a {
 }
 
 .nav_list_link {
-    font-weight: 500;
+   font-weight: 500;
     font-size: 16px;
-    letter-spacing: 0.02em;
     line-height: 1.5;
-    color: #2E2F42;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    padding: 24px 0;
+    display: block;
 }
  
 .header_address {
@@ -48,6 +84,20 @@ a {
     font-size: 16px;
     letter-spacing: 0.02em;
     line-height: 1.5;
+    color: #434455;
+}
+.header_nav_list  {
+     display: flex;
+    gap: 40px;
+}
+.header_address_link{
+   display: flex;
+    gap: 40px; 
+}
+.address_list_link{
+      font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
@@ -62,6 +112,14 @@ a {
 
 .hero_baner {
     background-color: #2E2F42;
+    padding: 188px 0;
+    background-image: linear-gradient(to bottom,
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url("../images/hero-image.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .hero_baner_title{
@@ -71,16 +129,25 @@ a {
     font-weight: 700;
     letter-spacing: 0.02em;
     text-align: center;
+    max-width: 496px;
+    margin: 0 auto 48px;
 }
 
 .hero_baner_button {
-     font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #ffff;
     font-weight: 500;
-    letter-spacing: 0.64px;
-    background-color:  #4D5AE5;
+    letter-spacing: 0.04px;
+    background-color: var(--primary-brand-color);
+    border: none;
+    border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
 }
 
@@ -90,34 +157,55 @@ a {
     background-color: #404BBF;
 }
 
+.features{
+    padding: 120px 0;
+}
 .features_head_title{
-   color: #2e2f42;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+   
 }
 
+.features_list{
+    display: flex;
+    gap: 24px;
+}
+
+
 .features_list_item_titles{
-     font-size: 20px;
+    font-size: 20px;
     line-height: 1.2;
     font-weight: 500;
     letter-spacing: 0.02em;
     color: #2e2f42;
-
+    margin-bottom: 8px;
 }
 
 .features_list_item_text{
-     font-size: 16px;
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
 
-
+/*.features_list_item {
+    padding-top: 120px;
+    padding-bottom: 200px;
+    padding-right: 24px;
+    flex-basis: calc((100% - 72px) / 4);
+} */
 
 .team {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team_title{
@@ -128,36 +216,94 @@ a {
     text-align: center;
     text-transform: capitalize;
     color: #2E2F42;
+    margin-bottom: 72px;
 }
 
+.team_list{
+    display: flex;
+    gap: 24px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 .team_list_item{
-    background-color: white;
+     flex-basis: calc((100% - 72px) / 4);
+    background: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
+.team_img{
+    display: block;
+    max-width: 100%;
+    
+}
+
+.team_info{
+    text-align: center;
+    padding: 32px 0;
+}
 .team_list_item_title{
-     font-size: 20px;
+    font-size: 20px;
     line-height: 1.2;
     font-weight: 500;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 .team_list_text{
       font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+     color: #434455;
+    margin: 0;
+    text-align: center;
 }
 
 
-
+.portfolio{
+    padding: 120px 0;
+    border: 1px solid #e7e9fc;
+}
 .portfolio_title{
      font-size: 36px;
     line-height: 1.11;
-    font-weight: 700;
     letter-spacing: 0.02em;  
     text-align: center;
     text-transform: capitalize;
+    text-transform: capitalize;
     color: #2E2F42;
+    margin-bottom: 72px;
+}
+
+.portfolio_list{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    list-style: none;
+    padding: 0;
+    margin: 0; 
+}
+.portfolio_list_item{
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+.portfolio_img{
+    display: block;
+    max-width: 100%;
+    
+}
+.portfolio_info {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio_list_item_title{
@@ -166,18 +312,25 @@ a {
     font-weight: 500;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    margin-bottom: 8px;
 }
 
 .portfolio_list_item_text{
      font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #434455;
+}
+.portfolio_list_item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 
 .footer {
     background-color: #2E2F42;
-   
+    padding: 100px 0;
   }
 
 .footer_logo{
@@ -188,11 +341,13 @@ a {
     line-height: 1.17;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-bottom: 16px;
+    display: inline-block;
+    
 }
 .footer_text{
     color: #F4F4FD;
-    font-size: 16px;
     line-height: 1.5;
-    font-weight: 400;
     letter-spacing: 0.02em;
+    max-width: 263px;
 }
