add markup header

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ img {
     --primary-brand-color: #4d5ae5;
 }
 
-.conteiner {
+.containergit {
     width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
