--- a/css/styles.css
+++ b/css/styles.css
@@ -67,15 +67,35 @@ img {
 }
 
 .nav_list_link {
-   font-weight: 500;
+    position: relative;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
     display: block;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
 }
- 
+.nav_list_link::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0px;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    opacity: 0;
+    transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav_list_link:hover::after,
+.nav_list_link:focus::after,
+.nav_list_link.current::after{
+    opacity: 1;
+}
+
 .header_address {
     font-style: normal;
 }
@@ -85,10 +105,14 @@ img {
     letter-spacing: 0.02em;
     line-height: 1.5;
     color: #434455;
+    display: block;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header_nav_list  {
-     display: flex;
+    display: flex;
     gap: 40px;
+    align-items: center;
 }
 .header_address_link{
    display: flex;
@@ -116,10 +140,12 @@ img {
     background-image: linear-gradient(to bottom,
             rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
-        url("../images/hero-image.jpg");
+        url("../images/people.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    max-width: 1440px; 
+    margin: 0 auto;
 }
 
 .hero_baner_title{
@@ -195,6 +221,21 @@ img {
     letter-spacing: 0.02em;
     max-width: 264px;
 }
+.features_item_svg .icon{
+     width: 64px;
+    height: 64px;
+}
+.features_item_svg{
+display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background-color: #f4f4fd;
+    padding: 24px 100px;
+margin-bottom: 8px;}
 
 /*.features_list_item {
     padding-top: 120px;
@@ -202,7 +243,7 @@ img {
     padding-right: 24px;
     flex-basis: calc((100% - 72px) / 4);
 } */
-
+/*--Team-->*/
 .team {
     background-color: #F4F4FD;
     padding: 120px 0;
@@ -263,21 +304,51 @@ img {
     margin: 0;
     text-align: center;
 }
+.team_social_list{
+     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    padding: 12px;
+}
 
+.social_link_item{
+    width: 40px;
+    height: 40px;
+    position: relative;
+}
+.social_link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social_link:focus,
+.social_link:hover
+{
+ background-color: #404bbf;
+}
+
+
+/*Portfolio*/
 
 .portfolio{
     padding: 120px 0;
     border: 1px solid #e7e9fc;
 }
 .portfolio_title{
-     font-size: 36px;
+    font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;  
     text-align: center;
     text-transform: capitalize;
-    text-transform: capitalize;
     color: #2E2F42;
     margin-bottom: 72px;
+    font-weight: 700;
 }
 
 .portfolio_list{
@@ -292,18 +363,41 @@ img {
 .portfolio_list_item{
     width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: 1px solid #e7e9fc;
-    border-top: none;
-}
-.portfolio_img{
-    display: block;
-    max-width: 100%;
+    
     
 }
+.portfolio_img{
+   display: block;
+max-width: 100%;
+    
+}
+.overlay{
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay_text{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    top: 0;
+    background-color: #4d5ae5;
+    position: absolute;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0,0.2, 1);
+    width: 100%;
+    height: 100%;
+    }
+
+                
 .portfolio_info {
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
+    border-bottom: 1px solid #e7e9fc;
     border-top: none;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
 }
 
 .portfolio_list_item_title{
@@ -321,20 +415,29 @@ img {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.portfolio_list_item:hover {
+.portfolio_list_item:hover .overlay_text{
+    transform: translateY(0%);
+   
+}
+.portfolio_list_item:hover{
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-        0 1px 1px 0 rgba(46, 47, 66, 0.16),
-        0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
+/*--Footer--*/
 
 .footer {
     background-color: #2E2F42;
     padding: 100px 0;
-  }
+}
+.footer_container{
+     display: flex;
+     align-items: baseline;
+}
 
 .footer_logo{
-     font-family: "Raleway", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     letter-spacing: 0.03em;
@@ -346,8 +449,35 @@ img {
     
 }
 .footer_text{
+    font-size: 16px;
     color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
     max-width: 263px;
+}
+.footer_social_list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+.footer_social_icon{
+    fill: #f4f4fd;
+    
+}
+.footer_social_text{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+
+.footer_container_logo{
+    margin-right: 120px;
+}
+.footer_social_list .social_link_item .social_link:hover,
+.footer_social_list .social_link_item .social_link:focus{
+  background-color: #31d0aa;
 }
