--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ img {
 }
 
 .header{
-     border-bottom: 1px solid #e7e9fc;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .conteiner_header {
@@ -51,7 +52,7 @@ img {
     letter-spacing: 0.03em;
     line-height: 1.17;
     text-transform: uppercase;
-    color: #4d5ae5; 
+    color:#404bbf; 
     margin-right: 76px;
     
 }
@@ -316,6 +317,12 @@ margin-bottom: 8px;}
     width: 40px;
     height: 40px;
     position: relative;
+}
+.social_icon{
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    fill:#f4f4fd;
 }
 .social_link{
     width: 100%;
