--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,9 @@ img {
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
 }
+.nav_list_link.current{
+  color: #404bbf;
+}
 .nav_list_link::after {
     content: "";
     position: absolute;
@@ -95,6 +98,7 @@ img {
 .nav_list_link:focus::after,
 .nav_list_link.current::after{
     opacity: 1;
+    
 }
 
 .header_address {
