--- a/css/styles.css
+++ b/css/styles.css
@@ -492,3 +492,256 @@ max-width: 100%;
 .footer_social_list .social_link_item .social_link:focus{
   background-color: #31d0aa;
 }
+
+.overlay_form{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(46, 47, 66, 0.4);
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: flex;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
+    padding: 20px;
+    border-radius: 4px;
+    z-index: 1000;
+    width: 408px;
+    min-height: 584px;
+    box-sizing: border-box;
+}
+
+.button_form{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #E7E9FC;
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.close_icon{
+    width: 8px;
+    height: 8px;
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.button_form:hover .close_icon,
+.button_form:focus .close_icon {
+    fill: white;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button_form:hover,
+.button_form:focus {
+    background-color: #404BBF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input_form:active .input-icon,
+.input_form:focus-within .input-icon {
+    fill: #404BBF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop_heading{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #2e2f42;
+    margin: 0;
+    color: var(--navy-color);
+    padding-top: 72px;
+    padding-bottom: 16px;
+}
+
+label {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.input_container {
+    position: relative;
+}
+
+.input_form {
+    border-radius: 4px;
+    padding-left: 38px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+}
+.input_form:active,
+.input_form:focus {
+    border: 1px solid #4d5ae5;
+    outline: none;
+}
+
+.input_form.textarea {
+    border-radius: 4px;
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 98px;
+}
+
+.input_icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2E2F42;
+}
+
+.input_form.textarea {
+    border-radius: 4px;
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 98px;
+}
+
+.privacy_heading{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.privacy_span{
+    font-family: "Roboto", sans-serif;
+    text-decoration: underline;
+    line-height: 1.3;
+    color: #4D5AE5;
+    
+}
+
+.privacy{
+    color: #4D5AE5;
+}
+
+
+.privacy_element {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    margin-top: 16px;
+}
+
+.form_fieldset {
+    display: flex;
+    flex-direction: column;
+    padding-top: 8px;
+    gap: 4px;
+}
+
+.checkbox_form {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+    
+}
+.checkbox_form {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
+.form_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background: #4d5ae5;
+    border: none;
+    margin-left: 119px;
+    margin: 24px auto 0;
+}
+
+.form_button:hover,
+.form_button:focus {
+    border: none;
+}
+
+.privacy_element .custom_checkbox {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #2E2F42;
+    border-radius: 2px;
+    background-color: #FFF;
+    flex-shrink: 0;
+    transition: all 0.2s ease;
+}
+
+.checkbox_form:checked+.custom_checkbox {
+    background-color: #4D5AE5;
+    border-color: #4D5AE5; 
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.privacy_element {
+    display: flex;
+    align-items: center;
+    ;
+    gap: 8px;
+    cursor: pointer;
+    margin-top: 16px;
+}
+
+::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
