--- a/css/styles.css
+++ b/css/styles.css
@@ -597,7 +597,7 @@ max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--cornflower);
+    background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
@@ -633,7 +633,7 @@ max-width: 100%;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--navy-blue);
+  color: #2E2F42;
   margin-bottom: 16px;
 }
 
