--- a/css/styles.css
+++ b/css/styles.css
@@ -733,19 +733,6 @@ max-width: 100%;
 }
 
 
-.checkbox-custom {
-   width: 16px;
-    height: 16px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
-    
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -758,22 +745,36 @@ max-width: 100%;
   border: 0;
 }
 
+.checkbox-custom {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 8px;
+  background-color: transparent;
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .checkbox-icon {
   fill: transparent;
-  pointer-events:none;
+  pointer-events: none;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.checkbox-input:checked + .checkbox-custom {
-  background-color:#404bbf; 
-  border:none;
+.checkbox-input:checked + label .checkbox-custom {
+  background-color: #404bbf;
+  border: none;
 }
 
-.checkbox-input:checked + .checkbox-custom .checkbox-icon {
-  fill:#F4F4FD; 
+.checkbox-input:checked + label .checkbox-icon {
+  fill: #f4f4fd;
 }
-
 .checkbox-input:checked.form_label.checkbox-custom{
     background-repeat: no-repeat;
     background-position: center;
