--- a/css/styles.css
+++ b/css/styles.css
@@ -759,6 +759,7 @@ max-width: 100%;
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+fill: transparent;
 }
 
 .checkbox-icon {
@@ -773,7 +774,7 @@ max-width: 100%;
 }
 
 .checkbox-input:checked + label .checkbox-icon {
-  fill: #f4f4fd;
+  fill: #F4F4FD;
 }
 .checkbox-input:checked.form_label.checkbox-custom{
     background-repeat: no-repeat;
